# containers

./: .gitignore  ADT.h  Adam_time.h  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  dycont  lab_03  main_dycont_T  main_dycont_T.cpp  main_lab2.cpp  main_list.cpp  queue_t.hpp  stack_t.hpp  tree.h
Dycont_f/: dycont_t  dycont_t.cpp  dycont_t.gcda  dycont_t.gcno  dycont_t.hpp  dycont_t.info
List_f/: list_t.hpp
Main_f/: main_lab3.cpp  main_list
Tree_f/: tree.cpp  tree_t.hpp
